// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test users reducer should get message about a problem with authentication 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about adding user to database 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about modifying user in database 1`] = `
Object {
  "errorMessage": "Okuratna wiadomość z serwera!",
  "message": "Okuratna wiadomość z serwera!",
  "selectedUser": Object {
    "_id": "1111-2222-3333-4444",
    "date": "01-01-2020",
    "email": "test@mail.com",
    "name": "tester",
    "password": "Terror2137",
    "role": "TESTER",
  },
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about removing user from database 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about single users' not finding 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about user's adding fail 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about user's modifying fail 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about user's removing fail 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should get message about users list's not finding 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "selectedUser": Object {},
  "usersList": Array [],
}
`;

exports[`test users reducer should load a single user 1`] = `
Object {
  "errorMessage": "",
  "message": "Okuratna wiadomość z serwera!",
  "selectedUser": Object {
    "_id": "1111-2222-3333-4444",
    "date": "01-01-2020",
    "email": "test@mail.com",
    "name": "tester",
    "password": "Terror2137",
    "role": "TESTER",
  },
  "usersList": Array [],
}
`;

exports[`test users reducer should load users list 1`] = `
Object {
  "errorMessage": "",
  "message": "Pozytywna wiadomość z serwera!",
  "selectedUser": Object {},
  "users": Array [
    Object {
      "_id": "1111-2222-3333-4444",
      "date": "01-01-2020",
      "email": "test@mail.com",
      "name": "tester",
      "password": "Terror2137",
      "role": "TESTER",
    },
  ],
  "usersList": Array [
    Object {
      "_id": "1111-2222-3333-4444",
      "date": "01-01-2020",
      "email": "test@mail.com",
      "name": "tester",
      "password": "Terror2137",
      "role": "TESTER",
    },
  ],
}
`;
